# DD2525-project-Exploring-WebAssembly-Security-Model-Including-Attacks-and-Mitigations

File Smuggling/: Cargo.toml  index.html  smuggled_test_exe_wasm.htm
File Smuggling/pkg/: package.json  smuggling.js  smuggling_bg.wasm
File Smuggling/src/: lib.rs
wasm-stack-smashing/: server.py
wasm-stack-smashing/inputs/: exploit (kopia).txt  exploit.txt  kth-logo.pnm
