[package]
name = "smuggling"
version = "0.1.0"
edition = "2018"
rust-version = "1.57"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.91"
js-sys = "0.3.45"
base64 = "0.21.7"

[dependencies.web-sys]
version = "0.3.68"
features = [
'Document',
'Element',
'HtmlElement',
'Node',
'Window',
'Location',
'TextDecoder',
'console'
]